# bcc-node

./: .gitignore  CODEOWNERS  Makefile  NOTICE  README.rst  SECURITY.md  STYLE.md  cabal.project  default.nix  docker-compose.yml  flake.nix  release.nix  shell.nix
.github/workflows/: haskell.yml
bcc-api/: ChangeLog.md  bcc-api.cabal
bcc-api/src/Bcc/: Api.hs
bcc-api/src/Bcc/Api/: Address.hs  Block.hs  Certificate.hs  Fees.hs  GenesisParameters.hs  IPC.hs  KeysSophie.hs  LedgerEvent.hs  LedgerState.hs  Modes.hs  Orphans.hs  ProtocolParameters.hs  Query.hs  Script.hs  ScriptData.hs  Sophie.hs  SpecialCole.hs  Tx.hs  TxBody.hs  TxMetadata.hs  Utils.hs  Value.hs  ValueParser.hs
bcc-api/test/: bcc-api-test.hs
bcc-api/test/Golden/: SophieGenesis
bcc-cli/: ChangeLog.md  bcc-cli.cabal
bcc-cli/app/: bcc-cli.hs
bcc-cli/src/Bcc/CLI/: TopHandler.hs  Types.hs
bcc-cli/test/: bcc-cli-test.hs
bcc-cli/test/Test/Cli/: MultiAssetParsing.hs
bcc-cli/test/Test/Config/: Mainnet.hs
bcc-cli/test/Test/Golden/: TxView.hs
bcc-client-demo/: LICENSE  LedgerState.hs  NOTICE  Stake-Credential-History.md  StakeCredentialHistory.hs  bcc-client-demo.cabal
bcc-config/: LICENSE  bcc-config.cabal
bcc-node/: ChangeLog.md  bcc-node.cabal
bcc-node-chairman/: bcc-node-chairman.cabal
bcc-node-chairman/app/Bcc/: Chairman.hs
bcc-node-chairman/testnet/Testnet/Commands/: Sophie.hs
bcc-node/src/Bcc/Node/: Orphans.hs  Parsers.hs  Run.hs  (+1 more)
bcc-submit-api/: README.md  bcc-submit-api.cabal  swagger.yaml  testing-tx-submit.md
bcc-testnet/: bcc-testnet.cabal
bcc-testnet/src/Test/: Process.hs
bcc-testnet/src/Testnet/: Bcc.hs
bcc-testnet/test/: Main.hs
bench/: tx-generator-config-base.json
bench/bcc-topology/: NOTICE  bcc-topology.cabal  bcc-topology.hs
bench/locli/: NOTICE  locli.cabal
bench/script/: test-large.json  test-zerepoch-to-file.json  test-zerepoch.json
bench/tx-generator/: NOTICE  tx-generator.cabal
ci/: check-hydra.sh
configuration/bcc/: mainnet-config.json  mainnet-config.yaml  mainnet-topology.json  sophie_qa-config.json  sophie_qa-sophie-genesis.json
configuration/chairman/cole-sophie/: configuration.yaml
configuration/chairman/sarah-only/: configuration.yaml
configuration/chairman/sophie-only/: configuration.yaml
configuration/defaults/cole-mainnet/: configuration.yaml
configuration/defaults/cole-staging/: configuration.yaml
configuration/defaults/cole-testnet/: configuration.yaml  topology.json
configuration/defaults/mainnet-silent/: configuration.yaml  topology.json
configuration/defaults/mainnet-via-fetcher/: configuration.yaml
configuration/defaults/simpleview/: config-0.yaml  config-1.yaml  config-2.yaml
configuration/godx/: mainnet-config.json
configuration/mainnet-ci/: configuration.yaml
doc/: conf.py
doc/.sphinx/: requirements.txt
doc/getting-started/: building-the-node-using-nix.md  install.md  understanding-config-files.md
doc/logging-monitoring/: grafana.md  liveview.md
doc/reference/: cole-genesis.md  configuring-a-node-using-yaml.md  diagnosing-transactions.md  multi-assets.md  simple-scripts.md  sophie-genesis.md  tx-metadata.md
doc/reference/zerepoch/: zerepoch-spending-script-example.md
doc/stake-pool-operations/: getConfigFiles_AND_Connect.md  register_stakepool.md  simple_transaction.md
example/: genesis.aurum.json  genesis.json
nix/: README.md  binary-release.nix  default.nix  haskell.nix  pkgs.nix  scripts-submit-api.nix  zerepoch-scripts.nix
nix/bcclib-py/: bcclib.py  setup.py
nix/docker/: README.md  default.nix  submit-api.nix
nix/godxlib-py/: setup.py
nix/nixos/: bcc-node-service.nix  tx-generator-service.nix
nix/workbench/: genesis.sh  supervisor.sh
nix/workbench/profiles/: adhoc.jq  node-services.nix
scripts/: README.md
scripts/benchmarking/: README.md  issue-genesis-utxo-expenditure.sh
scripts/cole-to-aurum/: mkfiles.sh  update-3.sh  update-4.sh  update-5.sh
scripts/cole-to-sophie/: mkfiles.sh
scripts/lite/: split-txouts.sh
scripts/lite/configuration/: sophie-1.yaml  sophie-3.yaml
scripts/test-stake-cred-script/: create-collateral.sh
scripts/testnet/aurum-blue/: aurum-genesis.json  configuration.yaml  sophie-genesis.json
scripts/zerepoch/: always-fails.sh  example-txin-locking-zerepoch-script.sh  script-context-equivalance-test.sh  script-context-equivalence-test-minting.sh  simple-minting-policy.sh
scripts/zerepoch/scripts/: guess-42-stake.zerepoch
scripts/zerepoch/staking-example/: claim-script-staking-rewards.sh  register-stake-pool.sh
trace-dispatcher/: README.md  trace-dispatcher.cabal
trace-dispatcher/doc/: trace-dispatcher.md
trace-dispatcher/examples/: config.json  config.nix
trace-dispatcher/examples/Examples/: Aggregation.hs  Configuration.hs  Documentation.hs  EKG.hs  FrequencyLimiting.hs  Routing.hs  TestObjects.hs  Trivial.hs
trace-dispatcher/src/Bcc/: Logging.hs
trace-dispatcher/src/Bcc/Logging/: Configuration.hs  DocuGenerator.hs  Formatter.hs  FrequencyLimiter.hs  Trace.hs  Types.hs  Utils.hs
trace-dispatcher/src/Bcc/Logging/Tracer/: Composed.hs  EKG.hs  Forward.hs  Standard.hs
trace-dispatcher/test/: trace-dispatcher-test.hs
trace-dispatcher/test/Bcc/Logging/Test/: Config.hs  Messages.hs  Oracles.hs  Script.hs  Tracer.hs  Types.hs
trace-forward/: README.md  trace-forward.cabal
trace-resources/: trace-resources.cabal
trace-resources/test/: trace-resources-test.hs
zerepoch-example/zerepoch-example/: zerepoch-example.cabal
zerepoch-example/zerepoch-example/app/: create-script-context.hs  zerepoch-example.hs
(+108 files in other folders)
