cabal-version:        2.4
name:                 trace-dispatcher
version:              1.29.0

synopsis:             Package for development of simple and efficient tracers
                      based on the arrow based contra-tracer package
author:               Juergen Nicklisch-Franken
maintainer:           operations@iohk.io
copyright:            2020 BCIO
extra-source-files:   CHANGELOG.md
                      README.md
                      doc/trace-dispatcher.md

library
  hs-source-dirs:     src
  exposed-modules:    Bcc.Logging
                      Bcc.Logging.Types
                      Bcc.Logging.Trace
                      Bcc.Logging.Configuration
                      Bcc.Logging.DocuGenerator
                      Bcc.Logging.Formatter
                      Bcc.Logging.FrequencyLimiter
                      Bcc.Logging.Tracer.EKG
                      Bcc.Logging.Tracer.Standard
                      Bcc.Logging.Tracer.Forward
                      Bcc.Logging.Tracer.Composed
                      Bcc.Logging.Utils
                      Control.Tracer.Arrow
                      Control.Tracer

  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  build-depends:      base >=4.12 && <5
                      , aeson
                      , async
                      , bytestring
                      , cborg
                      , containers
                      , contra-tracer
                      , ekg
                      , ekg-core
                      , ekg-forward
                      , hostname
                      , network
                      , shardagnostic-network-framework
                      , serialise
                      , stm
                      , text
                      , time
                      , trace-forward
                      , unagi-chan
                      , unliftio
                      , unliftio-core
                      , unordered-containers
                      , yaml

  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -Wno-incomplete-patterns


executable trace-dispatcher-examples
    main-is:          Main.hs
    other-modules:    Examples.TestObjects
                      Examples.Aggregation
                      Examples.Trivial
                      Examples.Routing
                      Examples.EKG
                      Examples.Configuration
                      Examples.FrequencyLimiting
                      Examples.Documentation
    hs-source-dirs:   examples
    default-language: Haskell2010
    default-extensions:  OverloadedStrings
    build-depends:    base >=4.12 && <5
                      , aeson
                      , bytestring
                      , containers
                      , ekg
                      , ekg-core
                      , hostname
                      , text
                      , trace-dispatcher
                      , time
                      , unagi-chan
                      , unliftio
                      , unliftio-core
                      , stm
                      , unordered-containers
                      , yaml
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -Wno-incomplete-patterns

test-suite trace-dispatcher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             trace-dispatcher-test.hs
  other-modules:       Bcc.Logging.Test.Types
                       Bcc.Logging.Test.Oracles
                       Bcc.Logging.Test.Config
                       Bcc.Logging.Test.Tracer
                       Bcc.Logging.Test.Messages
                       Bcc.Logging.Test.Script
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.12 && <5
                      , aeson
                      , bytestring
                      , containers
                      , ekg
                      , ekg-core
                      , hostname
                      , text
                      , trace-dispatcher
                      , time
                      , unagi-chan
                      , unliftio
                      , unliftio-core
                      , stm
                      , unordered-containers
                      , yaml
                      , QuickCheck
                      , tasty
                      , tasty-quickcheck

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -Wno-incomplete-patterns
